--- a/omi_weather_forecast_python/requirements.txt
+++ b/omi_weather_forecast_python/requirements.txt
@@ -7,6 +7,7 @@ click==8.1.7 ; python_version >= "3.11" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.11" and python_version < "4.0" and platform_system == "Windows"
 distro==1.9.0 ; python_version >= "3.11" and python_version < "4.0"
 flask==3.1.0 ; python_version >= "3.11" and python_version < "4.0"
+gunicorn==23.0.0 ; python_version >= "3.11" and python_version < "4.0"
 h11==0.14.0 ; python_version >= "3.11" and python_version < "4.0"
 httpcore==1.0.7 ; python_version >= "3.11" and python_version < "4.0"
 httpx==0.28.0 ; python_version >= "3.11" and python_version < "4.0"
@@ -16,6 +17,7 @@ jinja2==3.1.4 ; python_version >= "3.11" and python_version < "4.0"
 jiter==0.8.0 ; python_version >= "3.11" and python_version < "4.0"
 markupsafe==3.0.2 ; python_version >= "3.11" and python_version < "4.0"
 openai==1.55.3 ; python_version >= "3.11" and python_version < "4.0"
+packaging==24.2 ; python_version >= "3.11" and python_version < "4.0"
 pydantic-core==2.27.1 ; python_version >= "3.11" and python_version < "4.0"
 pydantic==2.10.2 ; python_version >= "3.11" and python_version < "4.0"
 python-dotenv==1.0.1 ; python_version >= "3.11" and python_version < "4.0"
